fix(Sidebar): menu alignment

--- a/src/scss/theme/_sidebar.scss
+++ b/src/scss/theme/_sidebar.scss
@@ -97,7 +97,7 @@
     text-decoration: none !important;
 
     @include bp('tablet') {
-      padding: 1.2rem 3.2rem;
+      padding: 1.2rem 2.4rem;
     }
 
     &--active {
